# Rustiventario

./: Cargo.toml  README.md
src/: main.rs
src/inventario/: manager.rs  mod.rs
src/models/: mod.rs  producto.rs
src/ui/: app.rs
src/utils/: file_io.rs
